<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".LoginPackage.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/logo"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:background="@drawable/white_basic_black_border"
            android:padding="10dp"
            android:drawableRight="@drawable/person"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="40dp"/>
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:background="@drawable/white_basic_black_border"
            android:padding="10dp"
            android:drawableRight="@drawable/gembok"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="40dp"/>
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/shape_orange2"
            android:layout_marginTop="30dp"
            android:text="MASUK"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@color/black"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_login"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="12sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_login2"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="12sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_login3"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_login4"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="12sp"/>

    </LinearLayout>


</RelativeLayout>