<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_orange2"
            android:text="@string/k1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <LinearLayout
            android:id="@+id/layout1"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_orange"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/bt_datepicker1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/shape_white"
                    android:layout_margin="4dp"
                    android:src="@drawable/date"/>
                <EditText
                    android:id="@+id/tv_dateresult1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:focusable="false"
                    android:hint="@string/tulis_tanggal"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_white"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/go1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_white"
                    android:layout_margin="5dp"
                    android:text="@string/cari"
                    android:textStyle="bold"
                    android:layout_weight="3"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_orange2"
            android:text="@string/k2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <LinearLayout
            android:id="@+id/layout2"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_orange"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/bt_datepicker2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/shape_white"
                    android:layout_margin="4dp"
                    android:src="@drawable/date"/>
                <EditText
                    android:id="@+id/tv_dateresult2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:focusable="false"
                    android:hint="@string/tulis_tanggal"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_white"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/go2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_white"
                    android:layout_margin="5dp"
                    android:text="@string/cari"
                    android:textStyle="bold"
                    android:layout_weight="3"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_orange2"
            android:text="@string/k3"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <LinearLayout
            android:id="@+id/layout3"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_orange"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/bt_datepicker3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/shape_white"
                    android:layout_margin="4dp"
                    android:src="@drawable/date"/>
                <EditText
                    android:id="@+id/tv_dateresult3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:focusable="false"
                    android:hint="@string/tulis_tanggal"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_white"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/go3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_white"
                    android:layout_margin="5dp"
                    android:text="@string/cari"
                    android:textStyle="bold"
                    android:layout_weight="3"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_orange2"
            android:text="@string/k4"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <LinearLayout
            android:id="@+id/layout4"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_orange"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/bt_datepicker4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/shape_white"
                    android:layout_margin="4dp"
                    android:src="@drawable/date"/>
                <EditText
                    android:id="@+id/tv_dateresult4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:focusable="false"
                    android:hint="@string/tulis_tanggal"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_white"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/go4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_white"
                    android:layout_margin="5dp"
                    android:text="@string/cari"
                    android:textStyle="bold"
                    android:layout_weight="3"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <Button
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_orange2"
            android:text="@string/k5"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <LinearLayout
            android:id="@+id/layout5"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_orange"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/bt_datepicker5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/shape_white"
                    android:layout_margin="4dp"
                    android:src="@drawable/date"/>
                <EditText
                    android:id="@+id/tv_dateresult5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:focusable="false"
                    android:hint="@string/tulis_tanggal"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_white"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/go5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_white"
                    android:layout_margin="5dp"
                    android:text="@string/cari"
                    android:textStyle="bold"
                    android:layout_weight="3"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>

</ScrollView>